src/test/deca/syntax/invalid/CircularInclude2.decah
#include "CircularInclude1.decah"